<resources>
    <string name="app_name">Contact Library</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email">Email</string>
    <string name="save">save</string>
    <string name="name2">Name</string>
    <string name="delelte_all">Delelte All</string>
    <string name="name3">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email2">Email</string>
</resources>
