<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".AddEditNewContact">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/contact"
        app:civ_border_width="2dp"
        app:civ_border_color="#5a0ae4"/>

    <!--Name Layout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_name_24dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/contact_name2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="#7200ca"
            android:textColorHint="#7200ca"
            tools:ignore="Autofill,HardcodedText" />
    </LinearLayout>

    <!--end of name layout-->

    <!--Mobile No Layout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_phone_black_24dp"
            tools:ignore="Autofill,ContentDescription,HardcodedText"/>

        <EditText
            android:id="@+id/contact_mobile_no"
            android:layout_width="304dp"
            android:layout_height="50dp"
            android:textColor="#7200ca"
            android:textColorHint="#7200ca"
            android:hint="@string/mobile_no"
            android:inputType="phone"
            tools:ignore="Autofill" />
    </LinearLayout>

    <!--end of Mobile No layout-->

    <!--Name Layout-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_email_black_24dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/contact_email"
            android:layout_width="304dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:textColor="#7200ca"
            android:textColorHint="#7200ca"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />
    </LinearLayout>

    <!--end of name layout-->

    <!--Save Button using cardView-->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:background="#7200ca"
        app:cardCornerRadius="30dp">

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#7200ca"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/save" />


    </android.support.v7.widget.CardView>

    <!--finish of save button-->


</LinearLayout>