<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#976eca"
    tools:context=".ContactInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/contact"
            app:civ_border_width="2dp"
            app:civ_border_color="#5a0ae4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_name_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/contact_name_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:hint="@string/name"
                android:gravity="center"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_phone_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/contact_phone_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:hint="@string/mobile_number"
                android:gravity="center"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_email_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/contact_email_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:hint="@string/email"
                android:gravity="center"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>